--- a/src/pages/sta/introduction.astro
+++ b/src/pages/sta/introduction.astro
@@ -36,7 +36,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 <SubSection title="Newton's laws" id="newtons_laws">
 
-Newton's equations relate the acceleration <InlineEquation equation='\\vec{a}' /> of a point mass with mass <InlineEquation equation='m' /> to the total applied force <InlineEquation equation='\\vec{F}' /> on the mass (sum of all applied forces). There is no derivation for Newton's equations, because they are an assumed model for dynamics. We can only verify them by comparing with experimental evidence, which confirms that Newtonian dynamics are accurate for non-relativistic and non-quantum systems.
+Newton's equations relate the acceleration <InlineEquation equation='\\vec{a}' /> of a point mass with mass <InlineEquation equation='m' /> to the total applied force <InlineEquation equation='\\vec{F}' /> on the mass (sum of all applied forces). 
 
 
 </SubSection>
@@ -139,7 +139,7 @@ A <em>rigid body</em> is an extended area of material that
         Neither point masses nor rigid bodies can physically exist,
         as no body can really be a single point with no extent, and
         no extended body can be exactly rigid. Despite this, these
-        are very useful models for mechanics and dynamics.
+        are very useful models for mechanics and statics.
       </p>
 
 </SubSubSection>
