Modified Units table headings
Applied \rm to units for Roman font in the Units table

--- a/src/pages/sol/stress.astro
+++ b/src/pages/sol/stress.astro
@@ -55,25 +55,25 @@ The units of stress can be found in the table below.
     <thead>
         <tr>
             <th>Measure</th>
-            <th>SI system</th>
-            <th>US system</th>
+            <th>SI units</th>
+            <th>Imperial units</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td>Force</td>
-            <td>[\(N\)]</td>
-            <td>[\(lb\)]</td>
+            <td>[\(\rm N\)]</td>
+            <td>[\(\rm lb\)]</td>
         </tr>
         <tr>
             <td>Area</td>
-            <td>[\(m^2\)]</td>
-            <td>[\(in^2\)]</td>
+            <td>[\(\rm m^2\)]</td>
+            <td>[\(\rm in^2\)]</td>
         </tr>
         <tr>
             <td>Stress</td>
-            <td>Pascal = [\(Pa\)] = [\(N/m^2\)]</td>
-            <td>pound per square inch = [\(psi\)] = [\(lb/in^2\)]</td>
+            <td>Pascal = [\(\rm Pa\)] = [\(\rm N/m^2\)]</td>
+            <td>pound per square inch = [\(\rm psi\)] = [\(\rm lb/in^2\)]</td>
         </tr>
     </tbody>
 </table>
@@ -83,16 +83,16 @@ The units of stress can be found in the table below.
  <table class="table table-responsive table-bordered table-sm">
     <tbody>
         <tr>
-            <td>kiloPascal [\(kPa\)]</td>
-            <td>\(10^3\) [\(Pa\)]</td>
+            <td>kiloPascal [\(\rm kPa\)]</td>
+            <td>\(10^3\) [\(\rm Pa\)]</td>
         </tr>
         <tr>
-            <td>megaPascal [\(MPa\)]</td>
-            <td>\(10^6\) [\(Pa\)]</td>
+            <td>megaPascal [\(\rm MPa\)]</td>
+            <td>\(10^6\) [\(\rm Pa\)]</td>
         </tr>
         <tr>
-            <td>gigaPascal [\(GPa\)]</td>
-            <td>\(10^9\) [\(Pa\)]</td>
+            <td>gigaPascal [\(\rm GPa\)]</td>
+            <td>\(10^9\) [\(\rm Pa\)]</td>
         </tr>
     </tbody>
 </table>
