remove example from frames and machines

--- a/src/pages/md/Balancing.astro
+++ b/src/pages/md/Balancing.astro
@@ -165,7 +165,7 @@ import CalloutContainer from "../../components/CalloutContainer.astro"
         <p><DisplayEquation equation="\m_BR_{By}= \\frac{-m_1R_{1y}l_1-m_2R_{2y}l_2-m_3R_{3y}l_3}{l_B}"  background="True"/></p>
 
 
-        <p> We have six unknowns (two masses, two x-positions, two y-positions). Again, this is okay because it allows for design freedom. </p>
+        <p> We have six unknowns (two masses, two x-positions, and two y-positions). Again, this is okay because it allows for design freedom. </p>
     </SubSection>
 
 
