--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -580,15 +580,15 @@ Alternatively, the vector components can be determined geometrically via the ang
 <DisplayEquation equation = "\\vec{A} \\times \\vec{B} = (B_z * A_y - A_z * B_y) * \\hat{\\imath} - (A_x * B_z - A_z * B_x) * \\hat{\\jmath} + (A_x * B_y - A_y * B_x) * \\hat{k}" title = "The cross product can be written as" background = "True" derivation = "True" id = "cp">
   <DisplayEquation equation = `\\begin{align} \\vec{A} \\times \\vec{B} &= \\begin{vmatrix}
       \\hat{\\imath} & \\hat{\\jmath} & \\hat{k} \\\\
-      A_x & A_y & A_z \\\\
-      B_x & B_y & B_z \\end{vmatrix} \\\\
-    &= \\begin{vmatrix} A_y & A_z \\\\
-      B_y & B_z \\end{vmatrix} * \\hat{\\imath} - \\begin{vmatrix} A_x & A_z \\\\
-      B_x & B_z \\end{vmatrix} * \\hat{\\jmath} + \\begin{vmatrix} A_x & A_y \\\\
-      B_x & B_y \\end{vmatrix} * \\hat{k} \\end{align}`/>
+      \\textcolor{purple}{A_x} & \\textcolor{green}{A_y} & \\textcolor{blue}{A_z} \\\\
+      \\textcolor{purple}{B_x} & \\textcolor{green}{B_y} & \\textcolor{blue}{B_z} \\end{vmatrix} \\\\
+    &= \\begin{vmatrix} \\textcolor{green}{A_y} & \\textcolor{blue}{A_z} \\\\
+      \\textcolor{green}{B_y} & \\textcolor{blue}{B_z} \\end{vmatrix} * \\hat{\\imath} - \\begin{vmatrix} \\textcolor{purple}{A_x} & \\textcolor{blue}{A_z} \\\\
+      \\textcolor{purple}{B_x} & \\textcolor{blue}{B_z} \\end{vmatrix} * \\hat{\\jmath} + \\begin{vmatrix} \\textcolor{purple}{A_x} & \\textcolor{green}{A_y} \\\\
+      \\textcolor{purple}{B_x} & \\textcolor{green}{B_y} \\end{vmatrix} * \\hat{k} \\end{align}`/>
   <DisplayEquation equation = `\\text{where} \\begin{vmatrix} a & b \\\\
     c & d \\end{vmatrix} = a * d - b * c`/>
-  <DisplayEquation equation = "\\vec{A} \\times \\vec{B} = (B_z * A_y - A_z * B_y) * \\hat{\\imath} - (A_x * B_z - A_z * B_x) * \\hat{\\jmath} + (A_x * B_y - A_y * B_x) * \\hat{k}"/>
+  <DisplayEquation equation = "\\vec{A} \\times \\vec{B} = (\\textcolor{blue}{B_z} * \\textcolor{green}{A_y} - \\textcolor{blue}{A_z} * \\textcolor{green}{B_y}) * \\hat{\\imath} - (\\textcolor{purple}{A_x} * \\textcolor{blue}{B_z} - \\textcolor{blue}{A_z} * \\textcolor{purple}{B_x}) * \\hat{\\jmath} + (\\textcolor{purple}{A_x} * \\textcolor{green}{B_y} - \\textcolor{green}{A_y} * \\textcolor{purple}{B_x}) * \\hat{k}"/>
 </DisplayEquation>
 
 </SubSubSubSection>
