--- a/src/pages/sol/material_properties.astro
+++ b/src/pages/sol/material_properties.astro
@@ -75,14 +75,14 @@ import Warning from "../../components/Warning.astro"
 <p>
 Generally, the state of stress a 3D material can be represented as a second-rank tensor (i.e. a matrix) with <InlineEquation equation="3^2 = 9" /> components.
 </p>
-<Image src="/sol/stress/Modified stress tensor.jpg" id="stress-element" width="7"> Infinitesimal Stress element</Image>
+<Image src="/sol/material_properties/Modified stress tensor.jpg" id="stress-element" width="7"> Infinitesimal Stress element</Image>
 <DisplayEquation equation=  "\\boldsymbol{\\sigma} = \\begin{bmatrix} \\sigma_{11} & \\sigma_{12} & \\sigma_{13} \\\\ \\sigma_{21} & \\sigma_{22} & \\sigma_{23} \\\\ \\sigma_{31} & \\sigma_{32} & \\sigma_{33} \\end{bmatrix} \\" title="Stress tensor." background="True"/>
 
 <p>
 Using indicial notation, component <InlineEquation equation = "(i, j)"/> of this tensor is denoted as <InlineEquation equation="\\sigma_{ij}" />. The same can be said for a material strain tensor.
 </p>
 
-<Image src="/sol/strain/Modified Strain Tensor.jpg" width="5"> Infinitesimal Strain Element </Image>
+<Image src="/sol/material_properties/Modified Strain Tensor.jpg" width="5"> Infinitesimal Strain Element </Image>
 <DisplayEquation equation= "\\boldsymbol{\\varepsilon} = \\begin{bmatrix} \\varepsilon_{11} & \\varepsilon_{12} & \\varepsilon_{13} \\\\ \\varepsilon_{21} & \\varepsilon_{22} & \\varepsilon_{23} \\\\ \\varepsilon_{31} & \\varepsilon_{32} & \\varepsilon_{33} \\end{bmatrix} \\" title="Strain tensor." background="True"/>
 
 <p>
