--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -22,7 +22,7 @@ import Warning from "../../components/Warning.astro"
         <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vectors'>Vectors</a>
               <ul class = 'list-group list-group-flush py-0'>
-                <li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsubsection' href = '#notation'>notation</a></li>
+                <li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsubsection' href = '#notation'>Notation</a></li>
               </ul>
             </li> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#scalars'>Scalars</a></li> 
