Statics replacements for "Astro description"
Added descriptions using the updated Layout element \\ standardized navtree in the pltips page

--- a/src/pages/sta/cartesian_coordinates.astro
+++ b/src/pages/sta/cartesian_coordinates.astro
@@ -13,7 +13,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
 ---
 
-<Layout title="Cartesian coordinates">
+<Layout title = "Cartesian coordinates" description = "Learn how to describe points in space using the Cartesian coordinate system and how to use the right hand rule.">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
