--- a/src/pages/sta/force_systems.astro
+++ b/src/pages/sta/force_systems.astro
@@ -8,7 +8,7 @@ import BlueText from "../../components/BlueText.astro"
 import InlineEquation from "../../components/InlineEquation.astro" 
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
-<Layout title="Force systems">
+<Layout title = "Force systems" description = "Learn about equivalent systems, concentrated forces, and different types of distributed loads.">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
