--- a/src/pages/sta/free_body_diagrams.astro
+++ b/src/pages/sta/free_body_diagrams.astro
@@ -12,7 +12,7 @@ import CalloutContainer from "../../components/CalloutContainer.astro"
 import CalloutCard from "../../components/CalloutCard.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
 ---
-<Layout title="Free body diagrams">
+<Layout title = "Free body diagrams" description = "Learn how to represent the external forces on a system graphically.">
 
   <div slot="navtree">
     <ul class='list-group list-group-flush py-0'> 
