--- a/src/pages/sta/introduction.astro
+++ b/src/pages/sta/introduction.astro
@@ -11,7 +11,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 import PrairieDrawCanvas from "../../components/PrairieDrawCanvas.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
 ---
-<Layout title="Introduction">
+<Layout title = "Introduction" description = "This page explains the essence of statics, the branch of mechanics dealing with forces in equilibrium.">
 
 <div slot="navtree">
     <ul class='list-group list-group-flush py-0'> 
