--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -13,7 +13,7 @@ import Row from "../../components/Row.astro"
 import Col from "../../components/Col.astro"
 ---
 
-<Layout title="Moment of inertia">
+<Layout title = "Moment of inerita" description = "This page explains the moment of inertia, how an object’s geometry affects its tendency to rotate.">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
