--- a/src/pages/sta/moments.astro
+++ b/src/pages/sta/moments.astro
@@ -8,7 +8,7 @@ import RedText from "../../components/RedText.astro"
 import InlineEquation from "../../components/InlineEquation.astro" 
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
-<Layout title="Moments">
+<Layout title = "Moments" description = "Learn how to quantify and visualize the rotational effect forces have about points or axes.">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
