--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -12,7 +12,7 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import CalloutCard from "../../components/CalloutCard.astro"
 import CalloutContainer from "../../components/CalloutContainer.astro"
 ---
-<Layout title="Reaction forces">
+<Layout title = "Reaction forces" description = "Learn about the support reactions and how to apply them to a system to solve for unknowns.">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
