--- a/src/pages/sta/shear_moment_diagrams.astro
+++ b/src/pages/sta/shear_moment_diagrams.astro
@@ -16,7 +16,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 ---
 <!-- Suggestion for a real world example -->
-<Layout title="Shear force & bending moment diagrams">
+<Layout title = "Shear force & bending moment diagrams" description = "Learn how to analyze shear and bending moments along beams and other structures.">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
