--- a/src/pages/sta/track_and_field_starting_blocks.astro
+++ b/src/pages/sta/track_and_field_starting_blocks.astro
@@ -12,7 +12,7 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import CalloutCard from "../../components/CalloutCard.astro"
 import CalloutContainer from "../../components/CalloutContainer.astro"
 ---
-<Layout title = "Track and field starting blocks">
+<Layout title = "Track and field starting blocks" description = "Learn how reaction forces relate to the starting blocks that are used track and field.">
 <Section title = "Track and field starting blocks" id = "track_and_field_starting_blocks">
 
 <p>
