--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -13,7 +13,7 @@ import PrairieDrawCanvas from "../../components/PrairieDrawCanvas.astro"
 import Row from "../../components/Row.astro"
 import Col from "../../components/Col.astro"
 ---
-<Layout title="Trusses">
+<Layout title = "Trusses" description = "Learn about truss systems, zero force members, the method of joints, and the method of sections.">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
