--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -18,7 +18,7 @@ import Example from "../../components/Example.astro"
         text-align: center;
     }
 </style>
-<Layout title="Friction">
+<Layout title = "Friction" description = "Learn about friction, tipping, slipping, and the location of the normal force.">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
