--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -9,7 +9,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 import Warning from "../../components/Warning.astro"
 import Example from "../../components/Example.astro"
 ---
-<Layout title="Hydrostatic fluid pressure">
+<Layout title = "Hydrostatic fluid pressure" description = "Analyze how density, gravity, and height affect the forces and moments applied to submerged objects.">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
