--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -15,7 +15,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 import Row from "../../components/Row.astro"
 import Col from "../../components/Col.astro"
 ---
-<Layout title="Virtual work">
+<Layout title = "Virtual work" description = "Analyze the work done by a real force acting through a virtual displacement.">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
