spelling mistake fix

--- a/src/pages/sta/pltips.astro
+++ b/src/pages/sta/pltips.astro
@@ -13,7 +13,7 @@ import SubSubSection from "../../components/SubSubSection.astro"
     <ul class='list-group list-group-flush py-0'> 
         <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#inputs'>Inputting answers</a></li> 
         <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#quizzes'>Reviewing for CBTF quizzes</a></li>
-        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#cbtf'>Computer Based Testing Facility (CBTF)"</a>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#cbtf'>Computer Based Testing Facility (CBTF)</a>
             <ul class='list-group list-group-flush py-0'> 
                 <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cbtf-policies'>Important CBTF policies</a></li> 
                 <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#computation'>Computation at CBTF</a></li> 
