--- a/src/pages/dyn/vectors.astro
+++ b/src/pages/dyn/vectors.astro
@@ -22,7 +22,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 import InlineCanvas from "../../components/InlineCanvas.astro"
 ---
 
-<Layout title="Vectors">
+<Layout title = "Vectors" description = "Understand the ways to describe vectors, which have magnitude and direction, and scalars, which only have magnitude.">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
