--- a/src/pages/dyn/work_and_energy.astro
+++ b/src/pages/dyn/work_and_energy.astro
@@ -23,7 +23,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 import Row from "../../components/Row.astro"
 import Col from "../../components/Col.astro"
 ---
-<Layout title="Work and Energy">
+<Layout title = "Work and energy" description = "Learn about work, kinetic energy, potential energy, friction, and momentum.">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
