--- a/src/pages/dyn/rigid_body_kinematics.astro
+++ b/src/pages/dyn/rigid_body_kinematics.astro
@@ -24,7 +24,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
 ---
 
-<Layout title="Rigid Body Kinematics">
+<Layout title = "Rigid body kinematics" description = "Learn about how velocity and acceleration of rigid bodies behave.">
 
 
 <div slot="navtree">
