--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -23,7 +23,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 ---
 
 
-<Layout title = "Particle kinematics" description = "Learn about how velocity and acceleration of particles behave in the Cartesian, Polar, and Tangent-Normal coordinate systems.">
+<Layout title = "Particle kinematics" description = "Learn how velocity and acceleration of particles behave in the Cartesian, Polar, and Tangent-Normal coordinate systems.">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
