--- a/src/pages/dyn/particle_kinetics.astro
+++ b/src/pages/dyn/particle_kinetics.astro
@@ -20,7 +20,7 @@ import Row from "../../components/Row.astro"
 import Col from "../../components/Col.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
 ---
-<Layout title = "Particle kinetics" description = "Learn about how forces affect velocity and acceleration of particles.">
+<Layout title = "Particle kinetics" description = "Learn how forces affect velocity and acceleration of particles.">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
