Removed asterisks in vectors and fbd pages
For representing scalar multiplication, replaced asterisks with spaces in the vectors and fbd pages \\ also fixed dot product formula mistake

--- a/src/pages/sta/free_body_diagrams.astro
+++ b/src/pages/sta/free_body_diagrams.astro
@@ -83,7 +83,7 @@ In this course we assume that a pulley is frictionless, meaning that the magnitu
 
 In this course, we assume springs are linearly elastic, which means that the force (tension) in the spring is linearly proportional to the extension of the spring (<InlineEquation equation='s' />) through the spring constant, <InlineEquation equation='k' />.
 
-<DisplayEquation equation='{F} = {k*s}\\' title="Spring force-extension relation" background="True" />
+<DisplayEquation equation='{F} = {k \\ s}\\' title="Spring force-extension relation" background="True" />
 
 <DisplayEquation equation='{s} = {l-l_0}\\' title="Spring extension" background="True" />
 
