--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -38,7 +38,7 @@ For an incompressible fluid (density <InlineEquation equation='\\rho' />) at res
 
 
 
-    <DisplayEquation equation="P(z) = \\rho*g*z" background="True" title="The fluid pressure P(z) can be written as"   id="hfp-eq" derivation="True">
+    <DisplayEquation equation="P(z) = \\rho \\ g \\ z" background="True" title="The fluid pressure P(z) can be written as"   id="hfp-eq" derivation="True">
             <p>
                 Ignoring air pressure:
 				<Image src='/sta/hydrostatic_fluid_pressure/FluidDerivation.jpg' width='4'> </Image>
@@ -55,7 +55,7 @@ For an incompressible fluid (density <InlineEquation equation='\\rho' />) at res
       Pressure is a force distributed over an area (force per area) and therefore has units of Pascals (Pa). To calculate the resultant force from hydrostatic fluid pressure, you must use  
     </p>
 
-	<DisplayEquation equation="F_R = P*A"/>
+	<DisplayEquation equation="F_R = P \\ A"/>
 
 	<p> where <InlineEquation equation=" A " /> is the area that the force is applied over. 
 	</p>	
@@ -83,14 +83,14 @@ In 3D, the value for <InlineEquation equation=" w " />, the distributed load on 
 
 <Image src='/sta/hydrostatic_fluid_pressure/Fluid3DPlate.PNG' width='5'></Image>
 
-<DisplayEquation equation = "F_R = \\rho * g * h * b * L" title = "In 3D, the resultant force from the distributed load can be written as" background = "True" derivation = "True" id = "hfp-3D">
-	<DisplayEquation equation = "\\begin{align} w = P = \\rho * g * h && \\mathrm{[\\frac{N}{m^2}]} \\end{align}"/>
+<DisplayEquation equation = "F_R = \\rho \\ g \\ h \\ b \\ L" title = "In 3D, the resultant force from the distributed load can be written as" background = "True" derivation = "True" id = "hfp-3D">
+	<DisplayEquation equation = "\\begin{align} w = P = \\rho \\ g \\ h && \\mathrm{[\\frac{N}{m^2}]} \\end{align}"/>
 	<p class = "text-center">
 		(force over area)<br>
 		To find <InlineEquation equation = "F_R,"/> multiply by area:
 	</p>
-	<DisplayEquation equation = `\\begin{align} F_R &= w * (b * L) \\Leftarrow \\text{volume under distributed load!} \\\\
-		&= \\rho * g * h * b * L \\end{align}`/>
+	<DisplayEquation equation = `\\begin{align} F_R &= w \\ (b \\ L) \\Leftarrow \\text{volume under distributed load!} \\\\
+		&= \\rho \\ g \\ h \\ b \\ L \\end{align}`/>
 </DisplayEquation>
 
 <p>
@@ -99,13 +99,13 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 
 <Image src='/sta/hydrostatic_fluid_pressure/Fluid2DPlate.PNG' width='5'></Image>
 
-<DisplayEquation equation = "F_R = \\rho * g * h * b * L" title = "In 2D, the resultant force from the distributed load can be written as" background = "True" derivation = "True" id = "hfp-2D">
-	<DisplayEquation equation = "\\begin{align} w = P * b = \\rho * g * h * b && \\mathrm{[\\frac{N}{m^2}] * [m] = [\\frac{N}{m}]} \\end{align}"/></span></div>
+<DisplayEquation equation = "F_R = \\rho \\ g \\ h \\ b \\ L" title = "In 2D, the resultant force from the distributed load can be written as" background = "True" derivation = "True" id = "hfp-2D">
+	<DisplayEquation equation = "\\begin{align} w = P \\ b = \\rho \\ g \\ h \\ b && \\mathrm{[\\frac{N}{m^2}] \\ [m] = [\\frac{N}{m}]} \\end{align}"/></span></div>
 	<p class = "text-center">
 		(force over length)<br>
 		To find <InlineEquation equation = "F_R,"/> multiply by length:
 	</p>
-	<DisplayEquation equation = `\\begin{align} F_R = w &* L = \\rho * g * h * b * L \\\\
+	<DisplayEquation equation = `\\begin{align} F_R = w &\\ L = \\rho \\ g \\ h \\ b \\ L \\\\
 		&\\Uparrow \\text{area under distributed load!} \\end{align}`/>
 </DisplayEquation>
 
