removed * from moi page

--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -77,7 +77,7 @@ import Col from "../../components/Col.astro"
         <tr>
             <th>Units</th>
             <td>
-                <InlineEquation equation="\\mathrm{mass} * \\mathrm{length} ^ 2"/>
+                <InlineEquation equation="\\mathrm{mass} \\ \\mathrm{length} ^ 2"/>
             </td>
             <td class="table-shaded">
                 <InlineEquation equation="\\mathrm{length} ^ 4"/>
