--- a/src/pages/dyn/contact_and_rolling.astro
+++ b/src/pages/dyn/contact_and_rolling.astro
@@ -20,7 +20,7 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
 
 
 
-<Layout title = "Contact and rolling" description = "Learn how velocity and acceleration behave when rigid bodies roll on flat and circular surfaces.">
+<Layout title = "Contact and rolling" description = "Learn how velocity and acceleration behave when rigid bodies roll on flat and curved surfaces.">
     <style>
         .caption-heading{
             border-bottom: solid 1px;
