--- a/src/pages/dyn.astro
+++ b/src/pages/dyn.astro
@@ -29,7 +29,7 @@ import "../../public/static/css/course_home_pages.css"
     <h3 class="fw-bold w-100">Helpful links:</h3>
     <ul>
       <li><a href="/sta/pltips">PrairieLearn tips</a></li>
-      <li><a href="/dyn/SymPy%20Doc.html">SymPy tutorial</a></li>
+      <li><a href="/dyn/sympy_tutorial">SymPy tutorial</a></li>
     </ul>
   </section>
 </div>
