rolling navtree // sentencing tense
fixed navtree indentation
made everything into sentencing tense
removed application subsection (nothing is there)

--- a/src/pages/dyn/contact_and_rolling.astro
+++ b/src/pages/dyn/contact_and_rolling.astro
@@ -20,7 +20,7 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
 
 
 
-<Layout title="Contact and Rolling">
+<Layout title="Contact and rolling">
     <style>
         .caption-heading{
             border-bottom: solid 1px;
@@ -29,21 +29,17 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#rolling_motion'>Rolling motion</a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#rolling_motion'>Rolling motion</a>
         <ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#rolling_flat_surface'>Flat surfaces</a></li>  
-			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#rolling_curved_surface'>Curved surfaces</a></li>   
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#rolling_flat_surface'>Rolling on a flat surface</a></li>  
+			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#rolling_curved_surface'>Rolling on curved surfaces</a></li>   
         </ul>	
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#app_contact_rolling'>Applications</a></li>
-        <ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#app_bearings'>Bearings</a></li>   
-        </ul>
-    </li> 
+    </li>
   </ul>
 </div>
 
 
-<Section title="Contact and Rolling"></Section>
+<Section title="Contact and rolling"></Section>
 
 
 <SubSection title="Rolling motion"  id="rolling_motion">
@@ -417,7 +413,6 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
 </SubSubSection>
 
 
-<SubSection title="Applications" id="app_contact_rolling"></SubSection>
 
 </Layout>
 
