--- a/src/pages/sol/material_properties.astro
+++ b/src/pages/sol/material_properties.astro
@@ -54,7 +54,7 @@ import Warning from "../../components/Warning.astro"
         </p>
     </CalloutCard>
 
-    <CalloutCard title="Heads up!">
+    <CalloutCard title="Notation Note">
         <p>
             Bold symbols, such as <InlineEquation equation="\\boldsymbol{\\sigma}" /> and <InlineEquation equation="\\boldsymbol{\\varepsilon}" />,
             represent tensors rather than scalar quantities.
